# prooompt-engineer

./: README.md  pyproject.toml
dev/: parser.ipynb  pydantic_messing.ipynb  pydantic_messing.py
examples/eval/: inputs.json  messages.json  template.json  template.txt
examples/loop/: inputs.json  messages.json  template.json  template.txt
examples/loop_outer/: inputs.json  messages.json  template.json  template.txt
examples/simple/: inputs.json  messages.json  template.json  template.txt
prooompt/: apply.py  datatypes.py  parse.py  tokenize.py
tests/: test_datatypes.py  test_examples.py
